# rdk_x5_smartlab_inspection

./: .gitignore  CMakeLists.txt  README.md  README_cn.md  package.xml
config/: nav2_params.yaml  navigate_no_replan.xml  yolov8_config.yaml
docs/: architecture.mmd  sequence.mmd
include/lab_inspection/: navigation_node.hpp  vision_node.hpp
launch/: lab_inspection.launch.py
maps/: lab_map.pgm  lab_map.yaml
scripts/: start_cruise.sh  vision_py.py
src/: navigation_node.cpp  vision_node.cpp
srv/: TriggerInspection.srv
web/: package-lock.json  package.json  sever.js  web.html
